--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <script src="storage-gist.js"></script>
 <style>
-    td.inbl {
-        background-color: lightgray;
-    }
-    td.inbl.ac {
-        background-color: aquamarine;
-    }
-    rect.imbl {
-        fill: lightgray;
-    }
-    rect.imbl.ac {
-        fill: springgreen;
-    }
+  #main table {
+    margin: 3px;
+    border-collapse: separate;
+    border-spacing: 1px 3px;
+  }
+  td.inbl {
+    background-color: lightgray;
+  }
+  td.inbl.ac {
+    background-color: aquamarine;
+  }
+  rect.imbl {
+    fill: lightgray;
+  }
+  rect.imbl.ac {
+    fill: springgreen;
+  }
 </style>
 </head>
 <body>
@@ -161,7 +166,7 @@
             var pageX=pageZ%pageW, pageY=Math.floor(pageZ/pageW);
             //console.log(pageX, pageY);
             if (pageZ==0) {
-                table = $('<table>').css('margin', '2em');
+                table = $('<table>');
                 img = $('<svg width="45" height="30">');
             }
             if (pageX==0) {
