--- a/1061hw.html
+++ b/1061hw.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>zero2solv</title>
+<title>殘酷擂台(?)</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
 <!-- Latest compiled and minified JavaScript -->
